Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123044

android: Playing something through QMediaPlayer and adjusting volume from physical buttons shows wrong mode

    XMLWordPrintable

Details

    • Android
    • 815957bb0 (dev), 5c8dde861 (dev), 3a1288ced (6.7), 94d8cc0a9 (6.7), 9a896a34f (tqtc/lts-6.5), b060e94fd (tqtc/lts-6.5)
    • 2024wk18FOQtforAndroid, 2024wk20s2FOQtforAndroid

    Description

      When a Qt application plays back some audio, the system volume popup has "phone" mode instead of "multimedia" mode. Even if "multimedia" is set as a default mode in the system.

      After several seconds of playback, the mode changes to the correct one.

      This kind of delay does not happen in native application.

      Also if recording a microphone, it is permanently in "phone" mode.

      Should reproduce in multimedia examples.

      Attachments

        1. QTBUG123044_REPRO.mp4
          4.88 MB
        2. VolumeTest.7z
          44 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bartlomiejmoskal Bartlomiej Moskal
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: