src/multimedia/android/qandroidmediadevices.cpp
@@ -23,9 +23,7 @@ Q_DECLARE_JNI_CLASS(QtAudioDeviceManager,
 
 QAndroidMediaDevices::QAndroidMediaDevices() : QPlatformMediaDevices()
 {
-   QtJniTypes::QtAudioDeviceManager::callStaticMethod<void>(
-                                      "registerAudioHeadsetStateReceiver",
-                                      QNativeInterface::QAndroidApplication::context());
+   QtJniTypes::QtAudioDeviceManager::callStaticMethod<void>("registerAudioHeadsetStateReceiver");
 }
 
 QAndroidMediaDevices::~QAndroidMediaDevices()
@@ -33,9 +31,7 @@ QAndroidMediaDevices::~QAndroidMediaDevices()
    // Object of QAndroidMediaDevices type is static. Unregistering will happend only when closing
    // the application. In such case it is probably not needed, but let's leave it for
    // compatibility with Android documentation
-   QtJniTypes::QtAudioDeviceManager::callStaticMethod<void>(
-                                      "unregisterAudioHeadsetStateReceiver",
-                                      QNativeInterface::QAndroidApplication::context());
+   QtJniTypes::QtAudioDeviceManager::callStaticMethod<void>("unregisterAudioHeadsetStateReceiver");
 }
 
 QList<QAudioDevice> QAndroidMediaDevices::audioInputs() const
